# FG-VIG

./: CMakeLists.txt  README.md
Examples/: IG.cpp  VIG_Sim.cpp  VIG_Syn.cpp
Results/VIG/NavGroup/20210123/t1/: FG_NavError_Stat.txt  IMUBias.txt  NavState.txt
Results/VIG/NavGroup/20210123/t1/1th/: FG_NavError.txt  IMUBias.txt  NavState.txt
Results/VIG/NavGroup/20210123/t1a/: FG_NavError.txt  FG_NavError1.txt  FG_NavError_MD20_F1.0.txt  FG_NavError_MD20_F2.0.txt  FG_NavError_MD20_F3.0.txt  FG_NavError_MD20_F4.0.txt  FG_NavError_MD30_F1.0.txt  FG_NavError_MD30_F2.0.txt  FG_NavError_MD30_F3.0.txt  FG_NavError_MD30_F4.0.txt  IMUBias.txt  NavState.txt  Video.avi
Results/VIG/NavGroup/20210123/t1a/1th/: FG_NavError.txt  FG_NavError_35.txt  IMUBias.txt  NavError.txt  NavState.txt
Results/VIG/NavGroup/20210123/t2/: FG_NavError.txt  IMUBias.txt  NavState.txt
Results/VIG/NavGroup/20210123/t2a/: FG_NavError.txt  IMUBias.txt  NavState.txt
Results/VIG/NavGroup/20210123/t3_e/: FG_NavError.txt  IMUBias.txt  NavState.txt
Results/VIG/vig_sim/: IMUBias.txt  NavStates.txt
Results/VIG/vig_sim/RtCp/: FG_NavError.txt  IMUBias.txt  NavState.txt
config/NavGroup/20210123/: t1.yaml  t1a.yaml  t2.yaml  t2a.yaml  t3_e.yaml  t3a.yaml
config/vig_sim/: RtCp.yaml  RtRp.yaml
data/: GPS_NED.txt  IMU.txt  imu_pose.txt  mPoints.txt
include/: Configuration.h  Mapper.h  Optimizer.h  Tracker.h  VIGCommon.h  VIGInitializer.h  Viewer.h
include/gtsam_derived/: jBatchFLSmoother.h  jGPSFactorYawLA.h  jInvDepthFactorVariant4.h  jPreintegratedIMUs.h
include/test/: TestSimVIO.h  TestSynVIO.h  TestVIO.h  TestVSlam.h
src/: Configuration.cpp  Mapper.cpp  Optimizer.cpp  Tracker.cpp  VIGCommon.cpp  VIGInitializer.cpp  Viewer.cpp
src/gtsam_derived/: jBatchFLSmoother.cpp  jGPSFactorYawLA.cpp  jPreintegratedIMUs.cpp
src/test/: TestSimVIO.cpp  TestSynVIO.cpp  TestVIO.cpp  TestVSlam.cpp  testInvDepthFactorVariant4.cpp
(+3 files in other folders)
